{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 605,
  "lineage": "6f76e2f6-7661-56da-e1b9-c0a6d8dc0492",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_lb",
      "name": "my-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:183631326752:loadbalancer/app/alb/79ec1d88d929c3bd",
            "arn_suffix": "app/alb/79ec1d88d929c3bd",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-795781525.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:183631326752:loadbalancer/app/alb/79ec1d88d929c3bd",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0bed68b62c5819bee"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0589b9f999e9e1259"
              },
              {
                "subnet_id": "subnet-0789cfaf127bc6a04"
              }
            ],
            "subnets": [
              "subnet-0589b9f999e9e1259",
              "subnet-0789cfaf127bc6a04"
            ],
            "tags": {
              "Name": "Projet_AWS-my-alb-tf"
            },
            "tags_all": {
              "Name": "Projet_AWS-my-alb-tf"
            },
            "vpc_id": "vpc-03a9fa64e702f6358",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "module.ec2.aws_security_group.sg-alb",
            "module.networking.aws_subnet.public_subnet_a",
            "module.networking.aws_subnet.public_subnet_b",
            "module.networking.aws_vpc.proget_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:183631326752:listener/app/alb/79ec1d88d929c3bd/558801392a3d4ddd",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:183631326752:targetgroup/tg/50278ba2e2ef9dc7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:183631326752:listener/app/alb/79ec1d88d929c3bd/558801392a3d4ddd",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:183631326752:loadbalancer/app/alb/79ec1d88d929c3bd",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_lb.my-alb",
            "module.ec2.aws_lb_target_group.my-alb-target-group",
            "module.ec2.aws_security_group.sg-alb",
            "module.networking.aws_subnet.public_subnet_a",
            "module.networking.aws_subnet.public_subnet_b",
            "module.networking.aws_vpc.proget_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "my-alb-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:183631326752:targetgroup/tg/50278ba2e2ef9dc7",
            "arn_suffix": "targetgroup/tg/50278ba2e2ef9dc7",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:183631326752:targetgroup/tg/50278ba2e2ef9dc7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03a9fa64e702f6358"
          },
          "dependencies": [
            "module.networking.aws_vpc.proget_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:183631326752:security-group/sg-020b6b79d16f00270",
            "description": "Security group for bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-020b6b79d16f00270",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion_sg",
            "name_prefix": "",
            "owner_id": "183631326752",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Projet_AWS-bastion_sg"
            },
            "tags_all": {
              "Name": "Projet_AWS-bastion_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a9fa64e702f6358"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.proget_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:183631326752:security-group/sg-0bed68b62c5819bee",
            "description": "security group for the load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bed68b62c5819bee",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lb-sg",
            "name_prefix": "",
            "owner_id": "183631326752",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Projet_AWS-sg-alb"
            },
            "tags_all": {
              "Name": "Projet_AWS-sg-alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a9fa64e702f6358"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.proget_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:183631326752:security-group/sg-085e56e6bd42106b2",
            "description": "security group for the ASG instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-085e56e6bd42106b2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bed68b62c5819bee"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bed68b62c5819bee"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "wordpress-sg",
            "name_prefix": "",
            "owner_id": "183631326752",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Projet_AWS-sg-webserver"
            },
            "tags_all": {
              "Name": "Projet_AWS-sg-webserver"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a9fa64e702f6358"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_security_group.sg-alb",
            "module.networking.aws_vpc.proget_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a5faf1afebb71fc6",
            "arn": "arn:aws:ec2:eu-west-3:183631326752:elastic-ip/eipalloc-0a5faf1afebb71fc6",
            "domain": "vpc",
            "id": "eipalloc-0a5faf1afebb71fc6",
            "network_border_group": "eu-west-3",
            "public_dns": "ec2-15-188-212-162.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.188.212.162",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cd51e30337179720",
            "arn": "arn:aws:ec2:eu-west-3:183631326752:elastic-ip/eipalloc-0cd51e30337179720",
            "domain": "vpc",
            "id": "eipalloc-0cd51e30337179720",
            "network_border_group": "eu-west-3",
            "public_dns": "ec2-15-188-142-217.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.188.142.217",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "proget_igateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:183631326752:internet-gateway/igw-07429afe9242fc692",
            "id": "igw-07429afe9242fc692",
            "owner_id": "183631326752",
            "tags": {
              "Name": "Projet_AWS-igateway"
            },
            "tags_all": {
              "Name": "Projet_AWS-igateway"
            },
            "vpc_id": "vpc-03a9fa64e702f6358"
          },
          "dependencies": [
            "module.networking.aws_vpc.proget_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a5faf1afebb71fc6",
            "association_id": "eipassoc-07533544525743965",
            "connectivity_type": "public",
            "id": "nat-042741dbf6ceaa48e",
            "network_interface_id": "eni-086d90b051a81ae67",
            "private_ip": "10.0.131.87",
            "public_ip": "15.188.212.162",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0589b9f999e9e1259",
            "tags": {
              "Name": "Projet_AWS-nat-public-a"
            },
            "tags_all": {
              "Name": "Projet_AWS-nat-public-a"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.eip_public_a",
            "module.networking.aws_subnet.public_subnet_a",
            "module.networking.aws_vpc.proget_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cd51e30337179720",
            "association_id": "eipassoc-0263a60f59533af0d",
            "connectivity_type": "public",
            "id": "nat-0522001fb1eba1697",
            "network_interface_id": "eni-0c775ad4e0624c19b",
            "private_ip": "10.0.159.35",
            "public_ip": "15.188.142.217",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0789cfaf127bc6a04",
            "tags": {
              "Name": "Projet_AWS-nat-public-b"
            },
            "tags_all": {
              "Name": "Projet_AWS-nat-public-b"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.eip_public_b",
            "module.networking.aws_subnet.public_subnet_b",
            "module.networking.aws_vpc.proget_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "route_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07429afe9242fc692",
            "id": "r-rtb-00775c7e4dc3f44ac1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00775c7e4dc3f44ac",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.proget_igateway",
            "module.networking.aws_route_table.rtb_public",
            "module.networking.aws_vpc.proget_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "route_private_nat_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a2d40e0f7285f74a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-042741dbf6ceaa48e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a2d40e0f7285f74a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.eip_public_a",
            "module.networking.aws_nat_gateway.nat_public_a",
            "module.networking.aws_route_table.rtb_private_a",
            "module.networking.aws_subnet.public_subnet_a",
            "module.networking.aws_vpc.proget_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "route_private_nat_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0bdcf8552d42c6e6e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0522001fb1eba1697",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bdcf8552d42c6e6e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.eip_public_b",
            "module.networking.aws_nat_gateway.nat_public_b",
            "module.networking.aws_route_table.rtb_private_b",
            "module.networking.aws_subnet.public_subnet_b",
            "module.networking.aws_vpc.proget_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:183631326752:route-table/rtb-0a2d40e0f7285f74a",
            "id": "rtb-0a2d40e0f7285f74a",
            "owner_id": "183631326752",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Projet_AWS-private-routetable-a"
            },
            "tags_all": {
              "Name": "Projet_AWS-private-routetable-a"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a9fa64e702f6358"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.proget_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:183631326752:route-table/rtb-0bdcf8552d42c6e6e",
            "id": "rtb-0bdcf8552d42c6e6e",
            "owner_id": "183631326752",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Projet_AWS-private-routetable-b"
            },
            "tags_all": {
              "Name": "Projet_AWS-private-routetable-b"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a9fa64e702f6358"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.proget_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:183631326752:route-table/rtb-00775c7e4dc3f44ac",
            "id": "rtb-00775c7e4dc3f44ac",
            "owner_id": "183631326752",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Projet_AWS-public-routetable"
            },
            "tags_all": {
              "Name": "Projet_AWS-public-routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a9fa64e702f6358"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.proget_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_subnet_association_privatea",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-071d219f0f081591d",
            "route_table_id": "rtb-0a2d40e0f7285f74a",
            "subnet_id": "subnet-0c30287b81cb8d47a"
          },
          "dependencies": [
            "module.networking.aws_route_table.rtb_private_a",
            "module.networking.aws_subnet.private_subnet_a",
            "module.networking.aws_vpc.proget_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_subnet_association_privateb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-026ca883b9f9157b7",
            "route_table_id": "rtb-0bdcf8552d42c6e6e",
            "subnet_id": "subnet-0a16f946db97b3850"
          },
          "dependencies": [
            "module.networking.aws_route_table.rtb_private_b",
            "module.networking.aws_subnet.private_subnet_b",
            "module.networking.aws_vpc.proget_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_subnet_association_puba",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069780756d7a27c6a",
            "route_table_id": "rtb-00775c7e4dc3f44ac",
            "subnet_id": "subnet-0589b9f999e9e1259"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.proget_igateway",
            "module.networking.aws_route.route_igw",
            "module.networking.aws_route_table.rtb_public",
            "module.networking.aws_subnet.public_subnet_a",
            "module.networking.aws_vpc.proget_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_subnet_association_pubb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01bbb60f2607c4f9e",
            "route_table_id": "rtb-00775c7e4dc3f44ac",
            "subnet_id": "subnet-0789cfaf127bc6a04"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.proget_igateway",
            "module.networking.aws_route.route_igw",
            "module.networking.aws_route_table.rtb_public",
            "module.networking.aws_subnet.public_subnet_b",
            "module.networking.aws_vpc.proget_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:183631326752:subnet/subnet-0c30287b81cb8d47a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c30287b81cb8d47a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "183631326752",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Projet_AWS-private-subnet-a"
            },
            "tags_all": {
              "Name": "Projet_AWS-private-subnet-a"
            },
            "vpc_id": "vpc-03a9fa64e702f6358"
          },
          "dependencies": [
            "module.networking.aws_vpc.proget_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:183631326752:subnet/subnet-0a16f946db97b3850",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a16f946db97b3850",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "183631326752",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Projet_AWS-private-subnet-b"
            },
            "tags_all": {
              "Name": "Projet_AWS-private-subnet-b"
            },
            "vpc_id": "vpc-03a9fa64e702f6358"
          },
          "dependencies": [
            "module.networking.aws_vpc.proget_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:183631326752:subnet/subnet-0589b9f999e9e1259",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0589b9f999e9e1259",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "183631326752",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Projet_AWS-public-subnet-a"
            },
            "tags_all": {
              "Name": "Projet_AWS-public-subnet-a"
            },
            "vpc_id": "vpc-03a9fa64e702f6358"
          },
          "dependencies": [
            "module.networking.aws_vpc.proget_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:183631326752:subnet/subnet-0789cfaf127bc6a04",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0789cfaf127bc6a04",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "183631326752",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Projet_AWS-public-subnet-b"
            },
            "tags_all": {
              "Name": "Projet_AWS-public-subnet-b"
            },
            "vpc_id": "vpc-03a9fa64e702f6358"
          },
          "dependencies": [
            "module.networking.aws_vpc.proget_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "proget_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:183631326752:vpc/vpc-03a9fa64e702f6358",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b351a93ab4fa0124",
            "default_route_table_id": "rtb-0ae12b58592185f24",
            "default_security_group_id": "sg-0cc65e0dc4abe0a85",
            "dhcp_options_id": "dopt-06a22609dcaf4db89",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03a9fa64e702f6358",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ae12b58592185f24",
            "owner_id": "183631326752",
            "tags": {
              "Name": "Projet_AWS-vpc"
            },
            "tags_all": {
              "Name": "Projet_AWS-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "RDS_allow_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:183631326752:security-group/sg-046031b3bf0ad049c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-046031b3bf0ad049c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-085e56e6bd42106b2"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20241023160058393800000005",
            "name_prefix": "terraform-",
            "owner_id": "183631326752",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Projet_AWS-sg-database"
            },
            "tags_all": {
              "Name": "Projet_AWS-sg-database"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a9fa64e702f6358"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_security_group.sg-alb",
            "module.ec2.aws_security_group.sg-instances",
            "module.networking.aws_vpc.proget_vpc"
          ]
        }
      ]
    }
  ]
}